opam-version: "2.0"
version: "0.2.2"
synopsis: "Declarative events and signals for OCaml"
description: "React is an OCaml module for functional reactive programming (FRP). It provides support to program with time varying values : declarative events and signals. React doesn't define any primitive event or signal, it lets the client chooses the concrete timeline."
maintainer: "Hugo Heuzard <hugo.heuzard@gmail.com>"
authors: ["Hugo Heuzard <hugo.heuzard@gmail.com>"]
homepage: "https://github.com/ocsigen/reactiveData"
dev-repo: "git+https://github.com/ocsigen/reactiveData.git"
bug-reports: "https://github.com/ocsigen/reactiveData/issues"

doc:"http://ocsigen.github.io/reactiveData/dev/"

tags: [ "reactive" "declarative" "signal" "event" "frp" ]
license: "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception"

depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "1.0"}
  "react" {>= "1.2.1" < "1.3"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
